<resources>
    <string name="app_name">Frenz</string>
    <string name="get_started">Get Started</string>
    <string name="register_for_exclusive_features_and_services_already_a_member_just_hit_the_login">Register for exclusive features and services, Already a member just hit the Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="login">Login</string>
    <string name="secure">Secure</string>
    <string name="private_">Private</string>
    <string name="anonn">Anonn</string>
    <string name="frenz">Frenz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="example_abc_com">example@abc.com</string>
    <string name="email_address">Email address</string>
    <string name="confirm_details">Confirm details</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="the_crazy_part">The crazy part</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="write">Write</string>
    <string name="profile">Profile</string>
    <string name="nothing_to_show">Nothing to show!</string>
    <string name="new_post">New Post</string>
    <string name="line">Line</string>
    <string name="cactyoxtail">CactyOxtail</string>
    <string name="hey_how_are_you_guy_s">Hey, How are you guy’s</string>
    <string name="insert_image_btn">Insert_image Btn</string>
    <string name="post">Post</string>
    <string name="imageplaceholder">imagePlaceHolder</string>
    <string name="crossbtn">crossBtn</string>
    <string name="profile_img">profile_img</string>
    <string name="frenzz_community_notes_is_probably_the_best_fact_checking_system_that_i_ve_come_across_not_perfect_but_definitely_a_huge_leap_in_the_right_direction">Frenzz Community Notes is probably the best fact checking system that I’ve come across. Not perfect, but definitely a huge leap in the right direction.</string>
    <string name="lorennjgsfdkasdskf_uahfdsaf_asfhdsfndsnf_kjsdaf_jndsjf_ndskfnsafkudsjafs_dkjf_nasdkfj_ndsfksnf">lorennjgsfdkasdskf uahfdsaf asfhdsfndsnf kjsdaf jndsjf ndskfnsafkudsjafs dkjf nasdkfj ndsfksnf</string>
    <string name="profile_profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="part_time_delivery_partner_nat_zomato">Part-time Delivery Partner, \nat @zomato</string>
    <string name="about">About</string>
    <string name="just_for_fun">Just for fun</string>
    <string name="done">Done</string>
    <string name="applogo">applogo</string>
    <string name="add_comment">Add comment</string>
    <string name="search_">Search</string>
</resources>