<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Custom Layout 1 -->
        <include layout="@layout/feature_one" />

        <!-- Custom Layout 2 -->
        <include layout="@layout/feature_two" />

        <!-- Custom Layout 3 -->
        <include layout="@layout/feature_three" />

        <!-- Custom Layout 4 -->
        <include layout="@layout/feature_four" />

    </ViewFlipper>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@drawable/card_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/register_for_exclusive_features_and_services_already_a_member_just_hit_the_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_up_btn_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#2C2C2C"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_btn_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#1D1B20"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>