<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0D0D0D"
    tools:context=".signup.EmailFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200sp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/enter_your_email_address"
            android:fontFamily="@font/roboto_medium"
            android:textSize="28sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:endIconMode="clear_text"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/email_address">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_email_confirm_details_btn"
            android:layout_width="match_parent"
            android:backgroundTint="@color/confirm_enable"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:minHeight="48dp"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:focusable="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="@string/confirm_details"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</FrameLayout>