<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#121212"
    tools:context=".homeActivity.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_profile"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/line"
        android:src="@drawable/line_drawable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:paddingEnd="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:fontFamily="@font/roboto_medium"
                android:textSize="24sp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/userDesciption_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:fontFamily="@font/roboto"
                android:textSize="14sp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#DC6161"
            android:layout_gravity="center"
            app:shapeAppearanceOverlay="@style/circular"
            app:strokeWidth="1dp"
            app:strokeColor="@color/white"
            android:src="@drawable/card_rectangle"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/edit_profile_btn"
            android:layout_width="wrap_content"
            android:backgroundTint="#1E1E1E"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="15dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="@string/edit_profile"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:backgroundTint="#1E1E1E"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:minHeight="48dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:text="@string/logout"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>